run jpynb from osx

--- a/Examples/midas_demo.ipynb
+++ b/Examples/midas_demo.ipynb
@@ -207,11 +207,11 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "2021-09-21 19:55:33.574423: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-            "2021-09-21 19:55:33.578115: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcusolver.so.11'; dlerror: libcusolver.so.11: cannot open shared object file: No such file or directory\n",
-            "2021-09-21 19:55:33.578495: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1835] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+            "2021-09-21 20:07:10.734701: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+            "2021-09-21 20:07:10.739202: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcusolver.so.11'; dlerror: libcusolver.so.11: cannot open shared object file: No such file or directory\n",
+            "2021-09-21 20:07:10.739670: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1835] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
             "Skipping registering GPU devices...\n",
-            "2021-09-21 19:55:33.578767: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+            "2021-09-21 20:07:10.740138: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
             "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
           ]
         },
@@ -219,26 +219,26 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch: 0 , loss: 131068.47352146133\n",
-            "Epoch: 1 , loss: 94854.00700680393\n",
-            "Epoch: 2 , loss: 90903.92177388803\n",
-            "Epoch: 3 , loss: 88696.29395811149\n",
-            "Epoch: 4 , loss: 85729.66137215351\n",
-            "Epoch: 5 , loss: 80736.09494030554\n",
-            "Epoch: 6 , loss: 76710.80340376188\n",
-            "Epoch: 7 , loss: 75636.9139805865\n",
-            "Epoch: 8 , loss: 74376.69275974258\n",
-            "Epoch: 9 , loss: 73966.10566457445\n",
-            "Epoch: 10 , loss: 74000.15907729563\n",
-            "Epoch: 11 , loss: 74631.02095257721\n",
-            "Epoch: 12 , loss: 73650.48740771932\n",
-            "Epoch: 13 , loss: 73793.70990846166\n",
-            "Epoch: 14 , loss: 73009.30129576917\n",
-            "Epoch: 15 , loss: 73938.83079166837\n",
-            "Epoch: 16 , loss: 73042.13243045032\n",
-            "Epoch: 17 , loss: 74000.77742886325\n",
-            "Epoch: 18 , loss: 73346.16820937091\n",
-            "Epoch: 19 , loss: 73472.1806237457\n",
+            "Epoch: 0 , loss: 131060.12472738164\n",
+            "Epoch: 1 , loss: 94869.06297356242\n",
+            "Epoch: 2 , loss: 90830.15935247378\n",
+            "Epoch: 3 , loss: 88528.95353520745\n",
+            "Epoch: 4 , loss: 85461.10624308855\n",
+            "Epoch: 5 , loss: 80486.11211142284\n",
+            "Epoch: 6 , loss: 76536.06388932974\n",
+            "Epoch: 7 , loss: 75540.07280830193\n",
+            "Epoch: 8 , loss: 74316.37026309592\n",
+            "Epoch: 9 , loss: 73984.68447112037\n",
+            "Epoch: 10 , loss: 73999.93967902707\n",
+            "Epoch: 11 , loss: 74538.63024502376\n",
+            "Epoch: 12 , loss: 73596.38242213098\n",
+            "Epoch: 13 , loss: 73786.58791174332\n",
+            "Epoch: 14 , loss: 72981.07277246477\n",
+            "Epoch: 15 , loss: 73847.48175952757\n",
+            "Epoch: 16 , loss: 72961.70744273734\n",
+            "Epoch: 17 , loss: 74021.42337696081\n",
+            "Epoch: 18 , loss: 73330.54337767755\n",
+            "Epoch: 19 , loss: 73336.20200380898\n",
             "Training complete. Saving file...\n",
             "Model saved in file: tmp/MIDAS\n"
           ]
@@ -247,7 +247,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<MIDASpy.midas_base.Midas at 0x7f0949d363d0>"
+              "<MIDASpy.midas_base.Midas at 0x7f9345a3d8b0>"
             ]
           },
           "metadata": {},
@@ -346,28 +346,28 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>const</td>\n",
-              "      <td>-998.371966</td>\n",
-              "      <td>149.070307</td>\n",
-              "      <td>-6.697323</td>\n",
-              "      <td>49.426939</td>\n",
-              "      <td>1.879502e-08</td>\n",
+              "      <td>-845.602953</td>\n",
+              "      <td>131.761974</td>\n",
+              "      <td>-6.417655</td>\n",
+              "      <td>79.268249</td>\n",
+              "      <td>9.372076e-09</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>education_num</td>\n",
-              "      <td>74.314372</td>\n",
-              "      <td>10.289858</td>\n",
-              "      <td>7.222099</td>\n",
-              "      <td>22.034606</td>\n",
-              "      <td>3.059523e-07</td>\n",
+              "      <td>57.687455</td>\n",
+              "      <td>8.798527</td>\n",
+              "      <td>6.556490</td>\n",
+              "      <td>26.862490</td>\n",
+              "      <td>5.076031e-07</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>age</td>\n",
-              "      <td>30.046572</td>\n",
-              "      <td>2.398036</td>\n",
-              "      <td>12.529659</td>\n",
-              "      <td>299.833281</td>\n",
+              "      <td>33.277681</td>\n",
+              "      <td>2.480652</td>\n",
+              "      <td>13.414893</td>\n",
+              "      <td>373.918334</td>\n",
               "      <td>0.000000e+00</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -376,9 +376,9 @@
             ],
             "text/plain": [
               "            term    estimate   std.error  statistic          df       p.value\n",
-              "0          const -998.371966  149.070307  -6.697323   49.426939  1.879502e-08\n",
-              "1  education_num   74.314372   10.289858   7.222099   22.034606  3.059523e-07\n",
-              "2            age   30.046572    2.398036  12.529659  299.833281  0.000000e+00"
+              "0          const -845.602953  131.761974  -6.417655   79.268249  9.372076e-09\n",
+              "1  education_num   57.687455    8.798527   6.556490   26.862490  5.076031e-07\n",
+              "2            age   33.277681    2.480652  13.414893  373.918334  0.000000e+00"
             ]
           },
           "metadata": {},
@@ -540,17 +540,11 @@
       "cell_type": "code",
       "execution_count": 9,
       "source": [
-        "# Define a flat list of OH-encoded categories\n",
-        "# This will be used to remove one-hot columns once we have created the categorical columns\n",
         "flat_cats = [cat for variable in cat_cols_list for cat in variable]\n",
         "\n",
-        "# Loop through imputations\n",
         "for i in range(len(imputations)):\n",
-        "    # For every categorical variable, and every observation, find the column index with the largest probability\n",
         "    tmp_cat = [imputations[i][x].idxmax(axis=1) for x in cat_cols_list]\n",
-        "    # Convert indexes into a dictionary for easy merging with data\n",
         "    cat_df = pd.DataFrame({categorical[i]:tmp_cat[i] for i in range(len(categorical))})\n",
-        "    # Merge data and remove one-hot columns\n",
         "    imputations[i] = pd.concat([imputations[i], cat_df], axis = 1).drop(flat_cats, axis = 1)\n"
       ],
       "outputs": [],
@@ -626,7 +620,7 @@
       "version": "0.12.3"
     },
     "interpreter": {
-      "hash": "fe998085c0a7ad0bcdf3525b9f45cdf58b866965c7062e895c80da2bfbfaae29"
+      "hash": "88f65ce5382ce20a2dfcb3047ae19453970fdb3147747ad8e6ead051daaa71e6"
     }
   },
   "nbformat": 4,
