run jpynb from osx

--- a/Examples/midas_demo.ipynb
+++ b/Examples/midas_demo.ipynb
@@ -13,15 +13,12 @@
         "This notebook provides a brief demonstration of **MIDASpy**'s core functionalities. We show how to use the package to impute missing values in the [Adult census dataset](https://github.com/MIDASverse/MIDASpy/blob/master/Examples/adult_data.csv) (which is commonly used for benchmarking machine learning tasks).\n",
         "\n",
         "Users of **MIDASpy** must have **TensorFlow** installed as a **pip** package in their Python environment. **MIDASpy** is compatible with both **TensorFlow** 1.X and **TensorFlow** >= 2.2 versions.\n",
-        "\n",
-        "\n",
-        "Once these packages are installed, users can import the dependencies and load the data:"
+        "\n\nOnce these packages are installed, users can import the dependencies and load the data:"
       ],
       "metadata": {}
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
       "source": [
         "from sklearn.preprocessing import MinMaxScaler\n",
         "import numpy as np\n",
@@ -35,6 +32,7 @@
       "outputs": [
         {
           "output_type": "execute_result",
+          "execution_count": 1,
           "data": {
             "text/plain": [
               "Index(['Unnamed: 0', 'age', 'workclass', 'fnlwgt', 'education',\n",
@@ -44,10 +42,10 @@
               "      dtype='object')"
             ]
           },
-          "metadata": {},
-          "execution_count": 1
+          "metadata": {}
         }
       ],
+      "execution_count": 1,
       "metadata": {}
     },
     {
@@ -59,7 +57,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
       "source": [
         "np.random.seed(441)\n",
         "\n",
@@ -75,6 +72,7 @@
         "data_0[spike_in == 1] = np.nan"
       ],
       "outputs": [],
+      "execution_count": 2,
       "metadata": {}
     },
     {
@@ -86,7 +84,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
       "source": [
         "categorical = ['workclass','marital_status','relationship','race','class_labels','sex','education','occupation','native_country']\n",
         "data_cat, cat_cols_list = md.cat_conv(data_0[categorical])\n",
@@ -100,6 +97,7 @@
         "data_in[na_loc] = np.nan"
       ],
       "outputs": [],
+      "execution_count": 3,
       "metadata": {}
     },
     {
@@ -111,7 +109,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
       "source": [
         "print(data_in.head())"
       ],
@@ -173,6 +170,7 @@
           ]
         }
       ],
+      "execution_count": 4,
       "metadata": {}
     },
     {
@@ -184,7 +182,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
       "source": [
         "imputer = md.Midas(layer_structure = [256,256], vae_layer = False, seed = 89, input_drop = 0.75)\n",
         "imputer.build_model(data_in, softmax_columns = cat_cols_list)\n",
@@ -200,60 +197,43 @@
             "Computation graph constructed\n",
             "\n",
             "Model initialised\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "2021-09-21 20:07:10.734701: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:937] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-            "2021-09-21 20:07:10.739202: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcusolver.so.11'; dlerror: libcusolver.so.11: cannot open shared object file: No such file or directory\n",
-            "2021-09-21 20:07:10.739670: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1835] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
-            "Skipping registering GPU devices...\n",
-            "2021-09-21 20:07:10.740138: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-            "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch: 0 , loss: 131060.12472738164\n",
-            "Epoch: 1 , loss: 94869.06297356242\n",
-            "Epoch: 2 , loss: 90830.15935247378\n",
-            "Epoch: 3 , loss: 88528.95353520745\n",
-            "Epoch: 4 , loss: 85461.10624308855\n",
-            "Epoch: 5 , loss: 80486.11211142284\n",
-            "Epoch: 6 , loss: 76536.06388932974\n",
-            "Epoch: 7 , loss: 75540.07280830193\n",
-            "Epoch: 8 , loss: 74316.37026309592\n",
-            "Epoch: 9 , loss: 73984.68447112037\n",
-            "Epoch: 10 , loss: 73999.93967902707\n",
-            "Epoch: 11 , loss: 74538.63024502376\n",
-            "Epoch: 12 , loss: 73596.38242213098\n",
-            "Epoch: 13 , loss: 73786.58791174332\n",
-            "Epoch: 14 , loss: 72981.07277246477\n",
-            "Epoch: 15 , loss: 73847.48175952757\n",
-            "Epoch: 16 , loss: 72961.70744273734\n",
-            "Epoch: 17 , loss: 74021.42337696081\n",
-            "Epoch: 18 , loss: 73330.54337767755\n",
-            "Epoch: 19 , loss: 73336.20200380898\n",
+            "\n",
+            "Epoch: 0 , loss: 131055.20626587074\n",
+            "Epoch: 1 , loss: 94882.5758455009\n",
+            "Epoch: 2 , loss: 90956.90158796997\n",
+            "Epoch: 3 , loss: 88764.57763543885\n",
+            "Epoch: 4 , loss: 85847.00143988573\n",
+            "Epoch: 5 , loss: 80933.15996490518\n",
+            "Epoch: 6 , loss: 76754.09316700627\n",
+            "Epoch: 7 , loss: 75646.90740190858\n",
+            "Epoch: 8 , loss: 74589.6067678469\n",
+            "Epoch: 9 , loss: 74155.46380383252\n",
+            "Epoch: 10 , loss: 74159.95000204784\n",
+            "Epoch: 11 , loss: 74705.84092718402\n",
+            "Epoch: 12 , loss: 73753.75950004607\n",
+            "Epoch: 13 , loss: 73959.30564486403\n",
+            "Epoch: 14 , loss: 73135.93429385444\n",
+            "Epoch: 15 , loss: 74014.20066695508\n",
+            "Epoch: 16 , loss: 73246.82324794705\n",
+            "Epoch: 17 , loss: 74179.63132589798\n",
+            "Epoch: 18 , loss: 73412.0879309418\n",
+            "Epoch: 19 , loss: 73584.05688892529\n",
             "Training complete. Saving file...\n",
             "Model saved in file: tmp/MIDAS\n"
           ]
         },
         {
           "output_type": "execute_result",
+          "execution_count": 5,
           "data": {
             "text/plain": [
-              "<MIDASpy.midas_base.Midas at 0x7f9345a3d8b0>"
+              "<MIDASpy.midas_base.Midas at 0x7fa85ed70c10>"
             ]
           },
-          "metadata": {},
-          "execution_count": 5
+          "metadata": {}
         }
       ],
+      "execution_count": 5,
       "metadata": {}
     },
     {
@@ -265,7 +245,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
       "source": [
         "imputations = imputer.generate_samples(m=10).output_list \n",
         "\n",
@@ -284,6 +263,7 @@
           ]
         }
       ],
+      "execution_count": 6,
       "metadata": {}
     },
     {
@@ -295,26 +275,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
       "source": [
         "model = md.combine(y_var = \"capital_gain\", \n",
         "                   X_vars = [\"education_num\",\"age\"],\n",
         "                   df_list = imputations)\n",
-        "\n",
-        "model"
+        "\nmodel"
       ],
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/home/tsr/.local/lib/python3.8/site-packages/statsmodels/tsa/tsatools.py:142: FutureWarning: In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only\n",
-            "  x = pd.concat(x[::order], 1)\n"
-          ]
-        },
-        {
           "output_type": "execute_result",
+          "execution_count": 7,
           "data": {
+            "text/plain": [
+              "            term    estimate   std.error  statistic          df       p.value\n",
+              "0          const -936.114554  136.800095  -6.842938   75.658615  1.764065e-09\n",
+              "1  education_num   67.955119    9.202229   7.384637   26.664184  6.556180e-08\n",
+              "2            age   31.339538    2.383158  13.150427  522.516002  0.000000e+00"
+            ],
             "text/html": [
               "<div>\n",
               "<style scoped>\n",
@@ -346,45 +323,39 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>const</td>\n",
-              "      <td>-845.602953</td>\n",
-              "      <td>131.761974</td>\n",
-              "      <td>-6.417655</td>\n",
-              "      <td>79.268249</td>\n",
-              "      <td>9.372076e-09</td>\n",
+              "      <td>-936.114554</td>\n",
+              "      <td>136.800095</td>\n",
+              "      <td>-6.842938</td>\n",
+              "      <td>75.658615</td>\n",
+              "      <td>1.764065e-09</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>education_num</td>\n",
-              "      <td>57.687455</td>\n",
-              "      <td>8.798527</td>\n",
-              "      <td>6.556490</td>\n",
-              "      <td>26.862490</td>\n",
-              "      <td>5.076031e-07</td>\n",
+              "      <td>67.955119</td>\n",
+              "      <td>9.202229</td>\n",
+              "      <td>7.384637</td>\n",
+              "      <td>26.664184</td>\n",
+              "      <td>6.556180e-08</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>age</td>\n",
-              "      <td>33.277681</td>\n",
-              "      <td>2.480652</td>\n",
-              "      <td>13.414893</td>\n",
-              "      <td>373.918334</td>\n",
+              "      <td>31.339538</td>\n",
+              "      <td>2.383158</td>\n",
+              "      <td>13.150427</td>\n",
+              "      <td>522.516002</td>\n",
               "      <td>0.000000e+00</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
-            ],
-            "text/plain": [
-              "            term    estimate   std.error  statistic          df       p.value\n",
-              "0          const -845.602953  131.761974  -6.417655   79.268249  9.372076e-09\n",
-              "1  education_num   57.687455    8.798527   6.556490   26.862490  5.076031e-07\n",
-              "2            age   33.277681    2.480652  13.414893  373.918334  0.000000e+00"
             ]
           },
-          "metadata": {},
-          "execution_count": 7
+          "metadata": {}
         }
       ],
+      "execution_count": 7,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -395,14 +366,12 @@
       "cell_type": "markdown",
       "source": [
         "### Handling one-hot encoded categories post-imputation\n",
-        "\n",
-        "To impute categorical data, we one-hot encode the variable and then impute the probability of each class for each observation. For example, if we look at the one-hot encoded `workclass` variable in the imputed data, we see that it is represented by 8 columns, one for each label in the data:"
+        "\nTo impute categorical data, we one-hot encode the variable and then impute the probability of each class for each observation. For example, if we look at the one-hot encoded `workclass` variable in the imputed data, we see that it is represented by 8 columns, one for each label in the data:"
       ],
       "metadata": {}
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
       "source": [
         "workclasses = [x for x in imputations[0].columns if \"workclass\" in x]\n",
         "imputations[0][workclasses].head()"
@@ -410,7 +379,30 @@
       "outputs": [
         {
           "output_type": "execute_result",
+          "execution_count": 8,
           "data": {
+            "text/plain": [
+              "   workclass_Federal-gov  workclass_Local-gov  workclass_Never-worked  \\\n",
+              "0                    0.0                  0.0                     0.0   \n",
+              "1                    0.0                  0.0                     0.0   \n",
+              "2                    0.0                  0.0                     0.0   \n",
+              "3                    0.0                  0.0                     0.0   \n",
+              "4                    0.0                  0.0                     0.0   \n",
+              "\n",
+              "   workclass_Private  workclass_Self-emp-inc  workclass_Self-emp-not-inc  \\\n",
+              "0                0.0                     0.0                         0.0   \n",
+              "1                0.0                     0.0                         1.0   \n",
+              "2                1.0                     0.0                         0.0   \n",
+              "3                1.0                     0.0                         0.0   \n",
+              "4                1.0                     0.0                         0.0   \n",
+              "\n",
+              "   workclass_State-gov  workclass_Without-pay  \n",
+              "0                  1.0                    0.0  \n",
+              "1                  0.0                    0.0  \n",
+              "2                  0.0                    0.0  \n",
+              "3                  0.0                    0.0  \n",
+              "4                  0.0                    0.0  "
+            ],
             "text/html": [
               "<div>\n",
               "<style scoped>\n",
@@ -499,34 +491,12 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>"
-            ],
-            "text/plain": [
-              "   workclass_Federal-gov  workclass_Local-gov  workclass_Never-worked  \\\n",
-              "0                    0.0                  0.0                     0.0   \n",
-              "1                    0.0                  0.0                     0.0   \n",
-              "2                    0.0                  0.0                     0.0   \n",
-              "3                    0.0                  0.0                     0.0   \n",
-              "4                    0.0                  0.0                     0.0   \n",
-              "\n",
-              "   workclass_Private  workclass_Self-emp-inc  workclass_Self-emp-not-inc  \\\n",
-              "0                0.0                     0.0                         0.0   \n",
-              "1                0.0                     0.0                         1.0   \n",
-              "2                1.0                     0.0                         0.0   \n",
-              "3                1.0                     0.0                         0.0   \n",
-              "4                1.0                     0.0                         0.0   \n",
-              "\n",
-              "   workclass_State-gov  workclass_Without-pay  \n",
-              "0                  1.0                    0.0  \n",
-              "1                  0.0                    0.0  \n",
-              "2                  0.0                    0.0  \n",
-              "3                  0.0                    0.0  \n",
-              "4                  0.0                    0.0  "
             ]
           },
-          "metadata": {},
-          "execution_count": 8
+          "metadata": {}
         }
       ],
+      "execution_count": 8,
       "metadata": {}
     },
     {
@@ -538,7 +508,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
       "source": [
         "flat_cats = [cat for variable in cat_cols_list for cat in variable]\n",
         "\n",
@@ -548,6 +517,7 @@
         "    imputations[i] = pd.concat([imputations[i], cat_df], axis = 1).drop(flat_cats, axis = 1)\n"
       ],
       "outputs": [],
+      "execution_count": 9,
       "metadata": {}
     },
     {
@@ -559,11 +529,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
       "source": [
         "print(imputations[0].columns)\n",
-        "\n",
-        "imputations[0]['workclass'].head()"
+        "\nimputations[0]['workclass'].head()"
       ],
       "outputs": [
         {
@@ -579,6 +547,7 @@
         },
         {
           "output_type": "execute_result",
+          "execution_count": 10,
           "data": {
             "text/plain": [
               "0           workclass_State-gov\n",
@@ -589,21 +558,22 @@
               "Name: workclass, dtype: object"
             ]
           },
-          "metadata": {},
-          "execution_count": 10
+          "metadata": {}
         }
       ],
+      "execution_count": 10,
       "metadata": {}
     }
   ],
   "metadata": {
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3.8.11 64-bit ('midas': conda)"
+      "language": "python",
+      "display_name": "Python 3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.8.11",
+      "version": "3.8.3",
       "mimetype": "text/x-python",
       "codemirror_mode": {
         "name": "ipython",
