--- a/Examples/midas_demo.ipynb
+++ b/Examples/midas_demo.ipynb
@@ -365,8 +365,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Handling one-hot encoded categories post-imputation\n",
-        "\nTo impute categorical data, we one-hot encode the variable and then impute the probability of each class for each observation. For example, if we look at the one-hot encoded `workclass` variable in the imputed data, we see that it is represented by 8 columns, one for each label in the data:"
+        "### Handling categorical data post-imputation\n",
+        "\nTo impute missing data in a categorical variable, we one-hot encode this variable and then impute the probability of each class for each observation. For example, the imputed version of the one-hot-encoded `workclass` variable is represented by 8 columns, one for each category in the data:"
       ],
       "metadata": {}
     },
@@ -502,7 +502,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Of course, if we want to use the categorical version then we usually want to transform these probabilities back into a vector of labels. The simplest approach is to select the category with the highest probability for each observation. Fortunately, having used `md.conv()` to one-hot encode these variables earlier, we can use the resulting `cat_cols_list` object to do just that. The following code collapses all encoded columns back into single categorical columns:"
+        "If we want to analyze the original categorical version of the variable post-imputation, we can transform these probabilities back into a vector of labels. The simplest approach is to select the category with the highest probability for each observation. Having used `md.conv()` to one-hot encode categorical variables earlier, we can use the associated `cat_cols_list` object to do just that. The following code collapses all one-hot-encoded columns back into single categorical columns:"
       ],
       "metadata": {}
     },
@@ -523,7 +523,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "If we now inspect the imputations we can see that our data is back to its original shape. Inspecting the `workclass` column, we see that the categories correspond to the one-hot encoded values identified earlier:"
+        "If we now inspect the imputations, we can see that the data are back to their original shape. For example, the `workclass` variable's categories correspond to the one-hot-encoded variables shown earlier:"
       ],
       "metadata": {}
     },
